--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 
   <title>Paint</title>
 </head>
@@ -19,7 +19,7 @@
 
     <div>
       <section class="tool-box">
-        <button class="button__tool" data-action="brush">
+        <button class="button__tool active" data-action="brush">
           <span class="material-symbols-outlined">brush</span>
         </button>
 
@@ -41,7 +41,7 @@
           <span class="stroke"></span>
         </button>
 
-        <button class="button__size" data-size=20>
+        <button class="button__size active" data-size=20>
           <span class="stroke"></span>
         </button>
 
